schema/testdata/errors/enum_default_no_expression.keel
model Post {
    fields {
        //expect-error:23:31:AttributeArgumentError:@default requires an expression
        type PostType @default
    }
}

enum PostType {
    Draft
    Published
}
